fix: overflow in committee page

--- a/netlify-gatsby-contentful/src/pages/executive-committee.module.css
+++ b/netlify-gatsby-contentful/src/pages/executive-committee.module.css
@@ -1,5 +1,6 @@
 .committeePage {
   padding: 0 30px;
+  overflow: hidden;
 }
 
 .committeePage h3 {
